[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/textures/soldier_shotgun/soldier_shotgun_idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/textures/soldier_shotgun/soldier_shotgun_die.png" type="Texture" id=2]
[ext_resource path="res://Assets/textures/soldier_shotgun/soldier_shotgun_shoot.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Soldier_Shotgun.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/Shotgun Sound.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("collider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 175 ), Vector2( 0, -69.1062 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/soldier_shotgun_idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("collider/soldier_shotgun_idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -69.1062 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collider:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("collider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, -69.1062 ), Vector2( 0, 175 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/soldier_shotgun_idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_timer"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 175 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/soldier_shotgun_idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collider/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collider/soldier_shotgun_idle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("collider:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("collider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -69.1062 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider/soldier_shotgun_idle:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 2, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("collider/soldier_shotgun_idle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "wait"
length = 0.3

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 95.7299
height = 182.258

[node name="Soldier_Shotgun" type="Position2D" groups=[
"enemiesH",
]]
script = ExtResource( 4 )

[node name="Anims_Shotgun" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/appear = SubResource( 1 )
anims/die = SubResource( 2 )
anims/disappear = SubResource( 3 )
anims/reset = SubResource( 4 )
anims/shoot = SubResource( 5 )
anims/wait = SubResource( 6 )
next/appear = "wait"
next/die = "reset"
next/disappear = "reset"
next/shoot = "disappear"
next/wait = "shoot"

[node name="collider" type="Area2D" parent="."]
position = Vector2( 0, 175 )

[node name="soldier_shotgun_idle" type="AnimatedSprite" parent="collider"]
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collider"]
position = Vector2( -10.0113, 13.3484 )
shape = SubResource( 8 )
disabled = true
one_way_collision = true

[node name="shotSound" type="AudioStreamPlayer2D" parent="collider"]
position = Vector2( 0, -175 )
stream = ExtResource( 5 )
volume_db = -4.0
bus = "SFX"

[node name="appear_timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="input_event" from="collider" to="." method="_on_collider_input_event"]
[connection signal="timeout" from="appear_timer2" to="." method="_on_appear_timer2_timeout"]
